[gd_scene load_steps=4 format=3 uid="uid://cyye1q4c7bg6x"]

[ext_resource type="Script" uid="uid://jvfgwquei4ml" path="res://gui/item_ui.gd" id="1_ly8wf"]

[sub_resource type="LabelSettings" id="LabelSettings_x7txg"]
line_spacing = 0.0
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_l0sb8"]
line_spacing = 0.0
font_size = 8

[node name="ItemUI" type="Control"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 3
anchors_preset = 0
offset_right = 30.0
offset_bottom = 30.0
mouse_filter = 1
script = ExtResource("1_ly8wf")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 30.0
offset_bottom = 30.0
expand_mode = 1
stretch_mode = 5

[node name="Info" type="ColorRect" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
color = Color(0, 0, 0, 0.207843)

[node name="NumberOrDurability" type="Label" parent="Info"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
label_settings = SubResource("LabelSettings_x7txg")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="BulletNumber" type="Label" parent="Info"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -6.5
offset_bottom = 5.5
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
label_settings = SubResource("LabelSettings_l0sb8")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
